--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.birariro.model2excel</groupId>
+    <groupId>com.github.birariro</groupId>
     <artifactId>model2excel</artifactId>
     <packaging>jar</packaging>
 
